--- a/Milestone_Practice_Exam_3.ipynb
+++ b/Milestone_Practice_Exam_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpKBZ2oH4XOyANLUA7Npcn",
+      "authorship_tag": "ABX9TyMB5NDUPYqnqEPTHsDs1O1I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -906,8 +906,7 @@
         "Find the linear approximation error when using the linear approximation to estimate:\n",
         "\n",
         " $\\sqrt[3]{27.45}$\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "UNyW84cvfx_u"
@@ -1069,6 +1068,197 @@
       ],
       "metadata": {
         "id": "aAkd5qCSPQ2S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Step 1: Take the natural logarithm of both sides to simplify the expression.\n",
+        "\n",
+        "$\\begin{align*}\\ln{y}&=\\ln{\\left(x^{4x^{3}+7}\\right)} \\\n",
+        "&= (4x^{3}+7)\\ln{x}\\end{align*}$\n",
+        "\n",
+        "Step 2: Now use the product rule to differentiate the right-hand side.\n",
+        "\n",
+        "So, differentiating, we have:\n",
+        "\n",
+        "$D[\\ln{y}] = \\frac{dy}{dx}\\cdot \\frac{1}{y}$\n",
+        "\n",
+        "$D[(4x^{3}+7)\\ln{x}] = D[(4x^{3}+7)]\\cdot \\ln{x} + (4x^{3}+7)\\cdot D[\\ln{x}] = 12x^2\\ln{x} + (4x^{3}+7)\\frac{1}{x}$\n",
+        "\n",
+        "$\\frac{1}{y}\\cdot \\frac{dy}{dx} = 12x^2\\ln{x} + (4x^{3}+7)\\frac{1}{x}$\n",
+        "\n",
+        "Step 3: Multiply both sides by $y$\n",
+        "\n",
+        "$\\frac{dy}{dx} = y\\cdot (12x^2\\ln{x} + 4x^{2} + \\frac{7}{x})$\n",
+        "\n",
+        "Step 4: Substitute $x^{4x^{3}+7}$ in for $y$\n",
+        "\n",
+        "So the derivative of $y' = x^{4x^{3}+7}$ is:\n",
+        "\n",
+        "$= x^{4x^{3}+7}(12x^2\\ln{x} + 4x^{2} + \\frac{7}{x})$"
+      ],
+      "metadata": {
+        "id": "9ifbeJtseARn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Inverse Trigonometric Functions.\n",
+        "\n",
+        "Find the exact value of $\\cos^{-1}(-1).\n",
+        "$"
+      ],
+      "metadata": {
+        "id": "ieyUfLVKkfbB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "The inverse cosine function, $\\cos^{-1}(x)$, gives the angle whose cosine is $x$.\n",
+        "\n",
+        "When we ask for $\\cos^{-1}(-1)$, we're looking for the angle whose cosine is -1.\n",
+        "\n",
+        "In the unit circle, cosine is the x-coordinate. The only angle where the x-coordinate is -1 is at $\\pi$ radians (or 180 degrees). Therefore,\n",
+        "\n",
+        "$cos^{−1} = cos^{−1}(−1)=π$ because the $\\cos{(\\pi)} = -1$\n",
+        "\n",
+        "And $\\pi$ is in $[0, \\pi]$"
+      ],
+      "metadata": {
+        "id": "f5mTit9Tl3Mr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Derivatives of Inverse Trigonometric Functions.\n",
+        "\n",
+        "\n",
+        "Find the derivative of:\n",
+        "\n",
+        "$f(x) = arctan(4x^2)$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "anYTGXjOosfr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sure, let's use the formula for the derivative of $\\arctan(x)$ which is $\\frac{1}{1+x^2}$.\n",
+        "\n",
+        "Step 1: Apply the chain rule which states that $(f(g(x)))' = f'(g(x))g'(x)$.\n",
+        "\n",
+        "In this case, $f(u) = \\arctan(u)$ and $g(x) = 4x^2$.\n",
+        "\n",
+        "So, first, we find the derivative of $g(u)$:\n",
+        "\n",
+        "$g(u) = 4x^2$, Therefore, $g'(u) = 8x$\n",
+        "\n",
+        "$f(u) = \\arctan{(u)}$ Therefore, $f'(u) = \\frac{1}{1+x^2}$\n",
+        "\n",
+        "$\\frac{dy}{dx}= \\frac{8x}{1 + 16x^4}$"
+      ],
+      "metadata": {
+        "id": "vfhg7hLnqA_U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Related Rates Problems Using Geometric Formulas.\n",
+        "\n",
+        "The radius of a circular oil spill is increasing at the rate of 1.2 meters per hour.\n",
+        "\n",
+        "Find the rate at which the area of the spill is increasing when the radius is 55 meters.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "F1-EWxTRo5eZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's denote:\n",
+        "\n",
+        "- $r$ as the radius of the oil spill (in meters)\n",
+        "- $A$ as the area of the oil spill (in square meters)\n",
+        "- $\\frac{dr}{dt}$ as the rate at which the radius is increasing (in meters per hour)\n",
+        "- $\\frac{dA}{dt}$ as the rate at which the area is increasing (in square meters per hour)\n",
+        "- Area of a circle: $A = \\pi r^2$\n",
+        "\n",
+        "Given that the radius of a circular oil spill is increasing at a rate of 1.2 meters per hour, we have:\n",
+        "\n",
+        "$\\frac{dr}{dt} = 1.2\\frac{m}{hr}$\n",
+        "\n",
+        "$\\frac{dA}{dt} = ?$ when $r = 55$\n",
+        "\n",
+        "Involves rates so use implicit differentiation:\n",
+        "\n",
+        "$\\frac{dA}{dt} = \\pi 2r\\frac{dr}{dt} = 2\\pi r\\frac{dr}{dt}$\n",
+        "\n",
+        "Substitute Known Quantities:\n",
+        "\n",
+        "$\\frac{dA}{dt} = 2\\pi (55m)(1.2\\frac{m}{hr}) = 132\\pi \\frac{m^2}{hr}$\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZeYmuG_Rtb2R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Related Rates Problems Using Proportional Reasoning and Trigonometry'.\n",
+        "\n",
+        "Gravel is falling on a conical pile at the rate of $28\\frac{ft^3}{min}$\n",
+        "\n",
+        "If the radius of the pile is always $\\frac{1}{3}$ the height, find the rate at which the height is changing when the pile is $11.5 ft$ high."
+      ],
+      "metadata": {
+        "id": "xvcMky62pBS5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We're given that the gravel is falling on a conical pile at a rate of $28 , \\text{ft}^3/\\text{min}$, and that the radius $r$ of the pile is always $\\frac{1}{3}$ of the height $h$. This means $r = \\frac{h}{3}$.\n",
+        "\n",
+        "The volume $V$ of a cone is given by $V = \\frac{1}{3}\\pi r^2 h$.\n",
+        "\n",
+        "We can replace $r$ with $\\frac{h}{3}$ in the volume formula to get $V = \\frac{1}{3}\\pi \\left(\\frac{h}{3}\\right)^2 h = \\frac{1}{27}\\pi h^3$.\n",
+        "\n",
+        "Given that $\\frac{dV}{dt} = 28 , \\text{ft}^3/\\text{min}$, we want to find $c$ when $h = 11.5 , \\text{ft}$.\n",
+        "\n",
+        "We can differentiate both sides of the volume equation with respect to $t$ (using the chain rule):\n",
+        "\n",
+        "$1\\cdot \\frac{dV}{dt} = \\frac{\\pi}{27}\\cdot 3h^2 \\frac{dh}{dt}$\n",
+        "\n",
+        "Simplify:\n",
+        "\n",
+        "$\\frac{dV}{dt} = \\frac{\\pi}{9}h^2 \\frac{dh}{dt}$\n",
+        "\n",
+        "Substitute the given information:\n",
+        "\n",
+        "$28\\frac{ft^3}{min} = \\frac{\\pi}{9}(11.5 ft)^2\\frac{dh}{dt}$\n",
+        "\n",
+        "Simplify:\n",
+        "\n",
+        "$28\\frac{ft^3}{min} = \\frac{132.25\\pi}{9}ft^2\\frac{dh}{dt}$\n",
+        "\n",
+        "$\\frac{252}{132.25\\pi}\\frac{ft}{min} = \\frac{dh}{dt}$\n",
+        "\n",
+        "$\\frac{dh}{dt} = \\frac{1008}{529}\\frac{ft}{min}$"
+      ],
+      "metadata": {
+        "id": "1ql2BVpEySFQ"
       }
     }
   ]
