--- a/Unit_1_Pre_Calculus_Review.ipynb
+++ b/Unit_1_Pre_Calculus_Review.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvfzs77v9uvcw+5+KTM6om",
+      "authorship_tag": "ABX9TyMUBz1MxT4a0UWSJ2SCzmij",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -399,6 +399,42 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### 3. Evaluate the difference quotient of:\n",
+        "\n",
+        "$f(x) = \\sqrt{x + 3}$"
+      ],
+      "metadata": {
+        "id": "VnuEzMIRgwCz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We want to evaluate this for $f(x) = \\sqrt{x + 3}$. Let's substitute this into our expression:\n",
+        "\n",
+        "$= \\frac{\\sqrt{(x+h)+3} - \\sqrt{x+3}}{h}$\n",
+        "\n",
+        "This expression might not seem easy to simplify, but if we multiply it by the conjugate of the numerator, we can simplify it:\n",
+        "\n",
+        "$ = \\frac{(x+h+3)-(x+3)}{h(\\sqrt{(x+h)+3}+\\sqrt{x+3})}$\n",
+        "\n",
+        "Simplifying this further, we get:\n",
+        "\n",
+        "$= \\frac{h}{h(\\sqrt{(x+h)+3}+\\sqrt{x+3})}$\n",
+        "\n",
+        "Cancelling the common factor of $h$, we get:\n",
+        "\n",
+        "$= \\frac{1}{\\sqrt{(x+h)+3}+\\sqrt{x+3}}$\n",
+        "\n",
+        "So, the difference quotient of $f(x) = \\sqrt{x + 3}$ is $\\frac{1}{\\sqrt{(x+h) + 3} + \\sqrt{x + 3}}$."
+      ],
+      "metadata": {
+        "id": "IhRQNN9WhZd0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Slope of a Line Between Two Points."
       ],
       "metadata": {
@@ -426,29 +462,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Shifting and Stretching Graphs."
-      ],
-      "metadata": {
-        "id": "hsW_ZBt2USkL"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "oKzJJ6vFUcZD"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "4rQ2EI1uUc1b"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## Evaluate Functions."
       ],
       "metadata": {
@@ -458,7 +471,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1. **Consider the function $f(x) = -x^2 - 4x + 5$. Use it to find $f(2), f(-3), f(a - 4)$**"
+        "### 1. **Consider the function $f(x) = -x^2 - 4x + 5$. Use it to find $f(2), f(-3), f(a - 4)$**\n",
+        "\n"
       ],
       "metadata": {
         "id": "RZD_XrV1Umve"
@@ -558,7 +572,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1. **Use point-slope form to write the equation of the line that contains the point (-2, 5) and has slope $-\\frac{3}{2}$**"
+        "### 1. **Use point-slope form to write the equation of the line that contains the point (-2, 5) and has slope $-\\frac{3}{2}$**\n",
+        "\n",
+        "Point-Slope Form:\n",
+        "\n",
+        "$y - y_1 = m(x - x_1)$"
       ],
       "metadata": {
         "id": "FF9ujzoqU3ev"
@@ -567,7 +585,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. **Write the equation of a line that contains the point (-6, 2) and has slope $\\frac{5}{3}$ in slope-intercept form.**"
+        "### 2. **Write the equation of a line that contains the point (-6, 2) and has slope $\\frac{5}{3}$ in slope-intercept form.**\n",
+        "\n",
+        "Slope-Intercept Form:\n",
+        "\n",
+        "$y = mx + b$"
       ],
       "metadata": {
         "id": "7kJn6pM6U3wP"
@@ -619,7 +641,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Equations of Circles."
+        "## Equations of Circles.\n",
+        "\n",
+        "Formulas:\n",
+        "\n",
+        "1. Radius of a Circle: $r = \\sqrt{(x - h)^2 + (y - k)^2}$\n",
+        "\n",
+        "2. Standard Form Equation of a Circle:  $(x - h)^2 + (y - k)^2 = r^2$"
       ],
       "metadata": {
         "id": "IA05hsOXVLqS"
@@ -655,7 +683,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1. **For $f(x) = \\left\\lfloor{x} \\right\\rfloor$, evaluate $f(12.959)$.**"
+        "### 1. **For $f(x) = \\left\\lfloor{x} \\right\\rfloor$, evaluate $f(12.959)$.**\n",
+        "\n",
+        "$f(12.959) = \\left\\lfloor{12.959} \\right\\rfloor = 12$"
       ],
       "metadata": {
         "id": "xX1udbE8VYzh"
@@ -664,17 +694,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. **For $f(x) = \\left\\lfloor\\frac{95}{x} \\right\\rfloor$, evaluate $f(12)$.**"
+        "### 2. **For $f(x) = \\left\\lfloor\\frac{95}{x} \\right\\rfloor$, evaluate $f(12)$.**\n",
+        "\n",
+        "$f(12) = \\left\\lfloor\\frac{95}{12} \\right\\rfloor$ $= \\left\\lfloor{7.9166} \\right\\rfloor = 7$"
       ],
       "metadata": {
         "id": "ve7lPJX-VZKR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "BN7gPi_Egxec"
       }
     }
   ]
